# picoDSP-BLE

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config.toml
.claude/skills/investigate-bt-drops/: SKILL.md
.zed/: debug.json
docs/: audio-clicks-ble-contention.md  psram-flash-corruption-investigation.md
src/: flash_diag.rs  main.rs  main.rs1  psram.rs
src/bt/: mod.rs
src/common/: shared.rs
src/control/: cc_map.rs  midi.rs  mod.rs
src/data/: mod.rs  presets.rs  storage.rs
src/dsp/: mod.rs  moog.rs  psram_delay.rs
src/tasks/: core0.rs  core1.rs  mod.rs
src/usb/: device.rs  logger.rs  mod.rs  uac1.rs
tools/midictl/: Cargo.toml  README.md
tools/midictl/.cargo/: config.toml
tools/midictl/src/: main.rs
