[package]
name = "rp2350-synth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
infinitedsp-core = { version = "0.9.0" }
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-usb = { version = "0.6.0", features = ["defmt", "max-interface-count-8"] }
embassy-futures = { version = "0.1.2" }
embassy-usb-logger = { version = "0.6.0" }

# --- Bluetooth (CYW43 BLE host -> BLE-MIDI keyboard) ---
# cyw43 0.7.0 pins bt-hci ^0.8 + embassy-sync 0.8 + embassy-time 0.5.1, matching the
# embassy versions used above. trouble-host is pinned to the git commit just before it
# bumped to bt-hci 0.9, so it shares bt-hci 0.8 + embassy-sync 0.8 with cyw43 (no
# duplicate crates in the graph).
# `firmware-logs` removed on purpose: it makes the runner do a backplane SPI read every
# single loop iteration, which is continuous bus/XIP contention against the core1 DSP.
cyw43 = { version = "0.7.0", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }
bt-hci = { version = "0.8", features = ["defmt"] }
# `security` enables the SMP/pairing stack: many BLE-MIDI keyboards mark their MIDI
# I/O characteristic as requiring an encrypted link and reject the CCCD subscribe with
# ATT error 0x05 (Insufficient Authentication) until the central pairs. We pair with
# JustWorks (NoInputNoOutput) + bonding and re-pair on each connection (no persisted bonds).
# `legacy-pairing` (implies `security`) is required because the keyboard is a BLE 4.x device
# that does NOT support LE Secure Connections; without it the central rejects the peer's
# pairing response with ATT/SMP "Authentication requirements not met" instead of falling
# back to LE Legacy pairing.
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "5c22e8d47faefeb90f0c16f03ddedf97b82fe282", features = ["defmt", "central", "gatt", "scan", "default-packet-pool", "legacy-pairing"] }
aligned = "0.4.3"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.9"
usbd-hid = "0.10.0"
embedded-alloc = "0.7.0"
panic-halt = "1.0.0"
libm = "0.2"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
embedded-storage-async = "0.4"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
embedded-sdmmc = "0.7.0"

[profile.dev]
opt-level = 1
debug = 2
codegen-units = 16

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/rp235x" }
]

# Vendored cyw43 0.7.0 with the bluetooth runner busy-poll throttled (vendor/cyw43,
# runner.rs BT_POLL_PERIOD). Upstream spins the runner flat-out on core0 because BT
# interrupts aren't implemented yet, which starves the core1 DSP via XIP/bus contention.
[patch.crates-io]
cyw43 = { path = "vendor/cyw43" }

[[bin]]
name = "rp2350-synth"
path = "src/main.rs"
test = false
doctest = false
bench = false
